about us spacing fix, covid19 update

--- a/src/sass/modules/_text.scss
+++ b/src/sass/modules/_text.scss
@@ -12,3 +12,7 @@
 a.text-decoration-none {
    text-decoration: none;
 }
+
+.text-lobster {
+   font-family: lobster;
+}
